11/2/2011 Report when the user tries to click on the non-interactive Bond Character node, see #3136
# 1.01.07 (58277) Nov 2, 2011
# 1.01.06 (58220) Nov 1, 2011
11/1/2011 Changed from SimSharingProperty to track UI control changes, see #3136
11/1/2011 Changed PropertyCheckBox to use actionPerformed instead of ChangeListener to suppress multiple event notifications, see #3136
10/31/2011 Use param() instead of new Parameter(), see #3136
# 1.01.05 (58185) Oct 31, 2011
# 1.01.04 (58184) Oct 31, 2011
10/31/11 Updated message formatting, see #3136
# 1.01.03 (58150) Oct 31, 2011
Redeploy after changing message output style, see #3136
# 1.01.02 (58110) Oct 28, 2011
Fixed build
# 1.01.01 (58108) Oct 28, 2011
Added messages for dragging in the play area
Added messages for several actions
Added dependency on simsharing-core
# 1.01.00 (57391) Oct 7, 2011
# 1.00.01 (57379) Oct 7, 2011
> change color of atom A to address colorblindness issue
10/07/11 #3106, make atom A a slightly less saturated yellow, so it's more distinct for people with deuteranope colorblindness
10/06/11 #3104, move mouse binding features from molecule-polarity to jmol-phet, for reuse in other sims
10/05/11 design doc snapshot checked into SVN
9/27/11 check in Tips for Teachers document
9/27/11 fix: 3D homogeneous diatomic molecules should be using gray (not white) for electron density surface color
> change bond color to a lighter gray, so that overlapping partial charges are more visible
9/27/11 #3095, change bonds to Color.GRAY, so that overlapping partial charges are more visible
9/27/11 integrate KL's model.txt changes
9/27/11 #3088 code review: minor changes recommended by IntelliJ code analyzer
9/27/11 #3088 code review: document why specific molecule locations were chosen
9/27/11 #3088 code review: note the potential for Jmol maintenance issues in implementation notes
9/27/11 #3088 code review: use Jmol log level=FATAL for production, level=WARN for dev
# 1.00.00 (56978) Sep 27, 2011